--- a/organization_searcher/src/main/res/values/strings.xml
+++ b/organization_searcher/src/main/res/values/strings.xml
@@ -1,1 +1,6 @@
-<resources></resources>
+<resources>
+
+    <string name="search_hint">Organization name</string>
+    <string name="no_results">No results 😓</string>
+
+</resources>
