--- a/organization_searcher/src/main/res/values/strings.xml
+++ b/organization_searcher/src/main/res/values/strings.xml
@@ -2,5 +2,7 @@
 
     <string name="search_hint">Organization name</string>
     <string name="no_results">No results 😓</string>
+    <string name="github_profile_bottom_sheet">Github profile</string>
+    <string name="repository_bottom_sheet_text">Repository</string>
 
 </resources>
